--- a/app/client/templates/installedApps/installedApps.html
+++ b/app/client/templates/installedApps/installedApps.html
@@ -16,7 +16,7 @@
 
       <div class="genre-other">
 
-        {{> appTable genre='Installed' reactive=true}}
+        {{> appTable genre='Installed' installPage=true reactive=true}}
 
       </div>
 
