sandstorm server selection box formatting updated as per #139

--- a/app/client/templates/components/getSandstormHost.scss
+++ b/app/client/templates/components/getSandstormHost.scss
@@ -2,8 +2,8 @@
 
 .host-container {
 
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 
 }
 
@@ -84,6 +84,8 @@
 
     .sandstorm-button {
       font-weight: normal;
+      height: 2.5rem;
+      line-height: 2.5rem;
     }
 
     .or {
