added error modal on image upload for icon/screenshots. fixes #167

--- a/app/client/templates/upload/upload.html
+++ b/app/client/templates/upload/upload.html
@@ -260,7 +260,7 @@
     </div>
   </div>
 
-  <input type="file" class="file-picker" data-action="file-picker" data-for="identicon" accept="image/*" />
+  <input type="file" class="file-picker" data-action="file-picker" data-for="identicon" accept="image/gif, image/jpeg, image/png" />
 
 </template>
 
@@ -304,7 +304,7 @@
 
   {{/each}}
 
-  <input type="file" class="file-picker" data-action="file-picker" data-for="screenshot" accept="image/*" />
+  <input type="file" class="file-picker" data-action="file-picker" data-for="screenshot" accept="image/gif, image/jpeg, image/png" />
 
 </template>
 
