removed filter.to intermediation

--- a/app/client/templates/components/app-item-full-width.html
+++ b/app/client/templates/components/app-item-full-width.html
@@ -10,7 +10,7 @@
 
         <div class="image-surround-full-width">
 
-          <div class="image" style="background-image: url('{{imageUrl image}}');"></div>
+          <div class="image" style="background-image: url('{{image}}');"></div>
 
         </div>
 
