--- a/app/client/templates/edit/edit.html
+++ b/app/client/templates/edit/edit.html
@@ -163,7 +163,7 @@
 
           {{#unless equal image parentApp.image}}
             <div class="identicon-container small">
-              <div class="identicon" style="background-image: url('{{imageUrl parentApp.image}}')" data-field="icon-image">#
+              <div class="identicon" style="background-image: url('{{parentApp.image}}')" data-field="icon-image">#
               </div>
             </div>
           {{/unless}}
