--- a/app/client/templates/review/review.html
+++ b/app/client/templates/review/review.html
@@ -179,7 +179,7 @@
 
           {{#unless equal image originalApp.image}}
             <div class="identicon-container small">
-              <div class="identicon" style="background-image: url('{{imageUrl originalApp.image}}')" data-field="icon-image">#
+              <div class="identicon" style="background-image: url('{{originalApp.image}}')" data-field="icon-image">#
               </div>
             </div>
           {{/unless}}
