--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -16,7 +16,7 @@
 
           <div class="image-surround">
 
-            <div class="image" style="background-image: url('{{imageUrl image}}');"></div>
+            <div class="image" style="background-image: url('{{image}}');"></div>
 
           </div>
 
@@ -55,7 +55,7 @@
 
           <div class="image-surround large">
 
-            <div class="image" style="background-image: url('{{imageUrl image}}');"></div>
+            <div class="image" style="background-image: url('{{image}}');"></div>
 
           </div>
 
@@ -204,7 +204,7 @@
 
         <div class="image-surround large">
 
-          <div class="image" style="background-image: url('{{imageUrl image}}');"></div>
+          <div class="image" style="background-image: url('{{image}}');"></div>
 
         </div>
 
