--- a/app/client/templates/single-app/single-app.html
+++ b/app/client/templates/single-app/single-app.html
@@ -16,7 +16,7 @@
 
               <div class="image-surround-full-width">
 
-                <div class="image" style="background-image: url('{{imageUrl image}}');"></div>
+                <div class="image" style="background-image: url('{{image}}');"></div>
 
               </div>
 
@@ -194,7 +194,7 @@
     <div class="owl-carousel">
       {{#each images}}
       <div class="screenshot-container">
-        <div class="screenshot" style="background-image: url('{{screenshotImageUrl this.url}}')"></div>
+        <div class="screenshot" style="background-image: url('{{this.url}}')"></div>
       </div>
       {{/each}}
     </div>
