--- a/app/client/templates/components/getSandstormHost.scss
+++ b/app/client/templates/components/getSandstormHost.scss
@@ -86,6 +86,11 @@
       font-weight: normal;
       height: 2.5rem;
       line-height: 2.5rem;
+
+      i {
+        position: relative;
+        left: 1rem;
+      }
     }
 
     .or {
