require full protocol in new sandstorm host name and add background colour to input box. fixes #176

--- a/app/client/templates/components/getSandstormHost.html
+++ b/app/client/templates/components/getSandstormHost.html
@@ -30,7 +30,7 @@
 
       <div class="sandstorm-input">
         <div class="input">
-          <input type="text" data-field="new-host" placeholder="Add a new server" />
+          <input type="url" required=true data-field="new-host" placeholder="Add a new server" />
         </div>
         <div class="button">
           <i class="fa fa-plus" data-action="add-host"></i>
