--- a/app/client/templates/components/getSandstormHost.scss
+++ b/app/client/templates/components/getSandstormHost.scss
@@ -104,6 +104,7 @@
     .sandstorm-input {
       .input {
         padding: 0;
+        background-color: #ffffff;
 
         input {
           width: 13rem;
