added alternate text to server selection box if no servers have been added yet. fixes #181

--- a/app/client/templates/components/getSandstormHost.html
+++ b/app/client/templates/components/getSandstormHost.html
@@ -8,7 +8,11 @@
 
     <div class="blurb">
       <p>
-        Select from the list below or add a new one:
+        {{#if hosts}}
+          Select from the list below or add a new one:
+        {{else}}
+          Add your first server below:
+        {{/if}}
       </p>
     </div>
 
