add sandstorm serverver button now accepts clicks not on icon itself

--- a/app/client/templates/components/getSandstormHost.html
+++ b/app/client/templates/components/getSandstormHost.html
@@ -36,8 +36,8 @@
         <div class="input">
           <input type="url" required=true data-field="new-host" placeholder="Add a new server" />
         </div>
-        <div class="button">
-          <i class="fa fa-plus" data-action="add-host"></i>
+        <div class="button" data-action="add-host">
+          <i class="fa fa-plus"></i>
         </div>
       </div>
     </div>
