--- a/app/client/templates/upload/upload.scss
+++ b/app/client/templates/upload/upload.scss
@@ -66,6 +66,10 @@
         padding-left: 0 !important;
         padding-right: 0 !important;
 
+        & + .half-col {
+          margin-top: 1.6rem;
+        }
+
       }
 
       .button-row {
