--- a/app/client/templates/shared/not_found/not_found.html
+++ b/app/client/templates/shared/not_found/not_found.html
@@ -1,5 +1,7 @@
 <template name="NotFound">
 
+  <div class="genre-other-section">
+
     <div class="contents">
 
       <div class="title-message">404 - Sorry, I can't find that {{object}}</div>
@@ -7,5 +9,7 @@
       <div class="subtitle-message">Click <a href="/">here</a> to navigate back to the App Market</div>
 
     </div>
+
+  </div>
 
 </template>
