navigating to single app page with rateApp=true in the queryString focuses on review box as well as opening it up. fixes #197

--- a/app/client/templates/installedApps/installedApps.html
+++ b/app/client/templates/installedApps/installedApps.html
@@ -51,7 +51,7 @@
   <div class="anti-modal-box uninstall-box">
 
     <div class="header">
-      REMOVE THIS APP FROM INSTALL HISTORY?
+      Remove this App from Install History?
     </div>
 
     <div class="divider">
@@ -69,7 +69,7 @@
         CANCEL
       </div>
       <div class="button" data-action="uninstall-app">
-        YES, UNINSTALL
+        YES, REMOVE
       </div>
 
     </div>
