--- a/app/client/templates/upload/upload.html
+++ b/app/client/templates/upload/upload.html
@@ -34,7 +34,9 @@
         <div class="sandstorm-button neutral" data-action="save-app">
           SAVE DRAFT
         </div>
-        <i class="icon-garbage" data-action="delete-app"></i>
+        {{#if getParam 'appId'}}
+          <i class="icon-garbage" data-action="delete-app"></i>
+        {{/if}}
 
       </div>
 
