Drafts with no title now show 'Untitled' in Apps By Me.  Fixes #209

--- a/app/client/templates/components/app-item-full-width.html
+++ b/app/client/templates/components/app-item-full-width.html
@@ -26,7 +26,7 @@
 
           <div class="left-float">
 
-            <div class="app-name-full-width">{{name}}</div>
+            <div class="app-name-full-width">{{#if name}}{{name}}{{else}}Untitled{{/if}}</div>
 
             <div class="app-author-full-width">{{authorName}}</div>
 
