--- a/app/client/templates/installedApps/installedApps.html
+++ b/app/client/templates/installedApps/installedApps.html
@@ -51,7 +51,7 @@
   <div class="anti-modal-box uninstall-box">
 
     <div class="header">
-      Remove this App from Install History?
+      Remove from Install History?
     </div>
 
     <div class="divider">
@@ -59,7 +59,7 @@
 
     <div class="blurb">
       <p>
-        This won't actually remove the app from any Sandstorm server, just remove it from your history.
+        This won't remove the app from your Sandstorm server, just remove it from your history.
       </p>
     </div>
 
