submitted/saved message, button disabling and pause before redirect on upload/edit/review pages.  fixes #220, resolves part of #224

--- a/app/client/templates/components/components.scss
+++ b/app/client/templates/components/components.scss
@@ -125,6 +125,21 @@
 
   }
 
+  &.disabled {
+    color: lighten(#6d627c, 40%) !important;
+    background: none;
+    border-color: lighten(#6d627c, 40%) !important;
+    border-width: 1px;
+    border-style: solid;
+    cursor: default !important;
+
+    i {
+      color: lighten(#6d627c, 40%) !important;
+      display: inline-block;
+    }
+
+  }
+
   &.color {
     background-color: #ffffff;
     border-color: #cdc7d3;
