--- a/app/client/templates/edit/edit.html
+++ b/app/client/templates/edit/edit.html
@@ -32,20 +32,12 @@
     <div class="right-float on-top">
 
       <div class="button-block">
-        {{#if lastEdit}}
-          <div class="message">
-            <i class="green icon-approved_dark"></i>SAVED AT {{dateFormat lastEdit 'H:mm, DD MMM YYYY'}}
-          </div>
-        {{/if}}
-        {{#if submitted}}
-          <div class="message">
-            <a href="{{getPath 'appsByMe'}}">SUBMITTED ON <span class="date">{{dateFormat submitted 'DD MMM YYYY'}}</span></a>
-          </div>
-        {{else}}
-          <div class="sandstorm-button neutral" data-action="submit-app">
-            SUBMIT APP FOR REVIEW
-          </div>
-        {{/if}}
+        <div class="message">
+          <i class="{{message.icon}}"></i>{{message.text}}
+        </div>
+        <div class="sandstorm-button neutral" data-action="submit-app">
+          SUBMIT APP FOR REVIEW
+        </div>
         <div class="sandstorm-button neutral" data-action="save-app">
           SAVE EDITS
         </div>
