--- a/app/client/templates/review/review.html
+++ b/app/client/templates/review/review.html
@@ -19,17 +19,9 @@
 
         <div class="button-block">
 
-          {{#if submitted}}
-            <div class="message">
-              <a href="{{getPath 'appsByMe'}}">SUBMITTED ON <span class="date">{{dateFormat submitted 'DD MMM YYYY'}}</span></a>
-            </div>
-          {{else}}
-            {{#if lastEdit}}
-              <div class="message">
-                <i class="green icon-approved_dark"></i>SAVED AT {{dateFormat lastEdit 'H:mm, DD MMM YYYY'}}
-              </div>
-            {{/if}}
-          {{/if}}
+          <div class="message">
+            <i class="{{message.icon}}"></i>{{message.text}}
+          </div>
           <div class="sandstorm-button color green {{#if equal parentApp.approved approval.approved}}active{{/if}}" data-action="approve">
             <i class="icon-approved_light"></i>
             <div class="text">Approve</div>
