app icon box now fully contains supplied icon. fixes #215. fixes #217

--- a/app/client/templates/components/app-item-full-width.scss
+++ b/app/client/templates/components/app-item-full-width.scss
@@ -28,7 +28,8 @@
         .image {
 
           content: "";
-          background-size: cover;
+          background-size: contain;
+          background-repeat: no-repeat;
           background-position: center;
           display: block;
           height: 100%;
