--- a/app/client/templates/components/app-item.scss
+++ b/app/client/templates/components/app-item.scss
@@ -47,7 +47,8 @@
       .image {
 
         content: "";
-        background-size: cover;
+        background-size: contain;
+        background-repeat: no-repeat;
         background-position: center;
         display: block;
         height: 100%;
@@ -512,7 +513,8 @@
       .image {
 
         content: "";
-        background-size: cover;
+        background-size: contain;
+        background-repeat: no-repeat;
         background-position: center;
         display: block;
         height: 100%;
