tweaked flag-box styling.  fixes #227

--- a/app/client/templates/review/review.html
+++ b/app/client/templates/review/review.html
@@ -34,7 +34,7 @@
             <i class="icon-rejected_light"></i>
             <div class="text">Reject</div>
           </div>
-          <div class="sandstorm-button color yellow {{#if isFlagged}}active{{/if}}" data-action="flag">
+          <div class="sandstorm-button color yellow {{#if isFlagged}}active{{/if}}" data-action="flag-app">
             <i class="icon-flagged_light"></i>
             <div class="text">Flag</div>
           </div>
