Renamed app namespace to AppMarket from App

--- a/app/client/templates/upload/upload.html
+++ b/app/client/templates/upload/upload.html
@@ -183,7 +183,7 @@
 
     <div class="spacer clearfix"></div>
 
-    <div class="filename existing">{{verboseNone existingApp.filename}}</div>
+    <div class="filename existing">{{verboseNone existingAppMarket.filename}}</div>
     <a class="square-button dark rem-space-float" href="/package/{{existingPackageId}}" target="_blank"><i class="fa fa-download"></i></a>
 
     <div class="spacer clearfix"></div>
